lume/Lume_3D/test/unittest/assets/test_data/gltf/Invalid/Duck_GLTFv1.glb
# This file was originally tracked by Git LFS but LFS tracking has been removed
version https://git-lfs.github.com/spec/v1
oid sha256:3442f0d1f35665d4b8927dce043b3f7913cca3cf8796f846497a2c93e9a21419
size 138708
